--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,8 @@
 body
 {
+    background: #1e1f24;
     color: #333;
-    text-align: left;
+    text-align: center;
     font-family: "Arial";
     font-size: 16px;
     margin: 0;
@@ -17,6 +18,13 @@ body
     margin: 0;
     padding: 0.5em;
 }
+
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
+}
+
 
 #cabecera #tagline
 {
@@ -41,5 +49,6 @@ body
 }
 #post
 {
+    background: white;
     padding: 1em;
 }
